--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0-beta.12"
+    "astro": "^1.0.0-beta.12",
+    "node-html-parser": "^5.3.3"
   }
 }
