--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "astro": "^1.0.0-beta.12",
-    "node-html-parser": "^5.3.3"
+    "node-html-parser": "^5.3.3",
+    "postcss-inline-svg": "^5.0.0"
   }
 }
